--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "@tomtom-international/web-sdk-maps": "^5.49.1",
+        "@tomtom-international/web-sdk-services": "^5.49.1"
     }
 }
